--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "babel-preset-react": "^6.24.1",
     "date-fns": "^2.25.0",
     "emotion": "^11.0.0",
     "formik": "^2.2.9",
@@ -36,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:production": "env-cmd -f .env.prod npm run build-css && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
