all changes added

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-REACT_APP_API_URL=http://localhost:4343/api
+REACT_APP_API_URL = http://localhost:4001/api
+REACT_APP_API_CART= http://localhost:4002/api
+REACT_APP_API_ORDER= http://localhost:4003/api
+
+
