--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
-REACT_APP_API_URL=https://www.satyam.shop/api
+REACT_APP_API_URL= https://www.satyam.shop/api
+REACT_APP_API_CART= https://www.satyam.shop/api
+REACT_APP_API_ORDER= https://www.satyam.shop/api
+REACT_APP_ENV = "production"
