--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "5.0.0-alpha.24",
     "@material-ui/lab": "^5.0.0-alpha.24",
-    "@mui/icons-material": "^5.0.3",
+    "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.3",
+    "@mui/x-data-grid": "^5.2.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,7 +18,10 @@
     "babel-preset-react": "^6.24.1",
     "date-fns": "^2.25.0",
     "emotion": "^11.0.0",
+    "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -38,7 +42,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:production": "env-cmd -f .env.prod npm run build-css && react-scripts build"
+    "build:production": "env-cmd -f .env.production npm run build-css && react-scripts build",
+    "build:development": "env-cmd -f .env.dev  npm run-script build"
   },
   "eslintConfig": {
     "extends": [
