--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-miui": "0.0.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
